set up the majority of intro page styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,6 @@
-$favColor: red;
+$medRed: #df2727;
+$purple: #4e3b59;
+$greyBlue: #a3abab;
+$orange: #ff4b32;
+$yellow: #ff9b0f;
+$textWhite: #fbead8; 
