--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,38 +1,27 @@
+@import '../styles/variables';
+
 .App {
   text-align: center;
+  font-family: 'Lobster', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  color: $textWhite;
+  font-family: 'Playfair Display SC', serif;
+  font-size: 700%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub-header {
+  color: $textWhite;
+  margin-top: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  color: $textWhite;
+  height: 50px;
+  font-size: 200%;
+  margin-top: 170px;
 }
