--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import 'variables';
 
 body {
-  background: linear-gradient(to bottom, $medRed 0% 20%, $purple 20% 30%, $greyBlue 30% 40%, $orange 40% 50%, $medRed 50% 60%, $yellow 60% 70%, $medRed 70% 80%, $orange 80% 90%, $greyBlue 90% 100%, $purple 90% 100%);
+  background: linear-gradient(to bottom, $medRed 0% 19%, $purple 19% 28%, $greyBlue 28% 37%, $orange 37% 46%, $medRed 46% 55%, $yellow 55% 64%, $medRed 64% 73%, $orange 73% 82%, $greyBlue 82% 91%, $purple 91% 100%);
   height:100vh;
+  overflow: hidden;
 }
