--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,10 +1,33 @@
-.card {
+@import '../../styles/variables';
+
+.player {
     height: 200px;
-    background-color: rgba(255, 255, 255, 0);
+    width: 700px;
+    background-color: $textWhite;
     color: black;
+    margin: 20px;
+    display: flex;
+    border: 1px solid black;
+    float: left;
     img {
-        height: 200px;
+        height: 197px;
         width: 200px;
         margin: 0;
+        float: left;
+        left: 0;
+    }
+    .player-body {
+        width: 100%;
+        height: 100%;
+        align-content: center;
+        justify-content: center;
+        overflow: auto;
+        .player-title {
+            font-size: 70px;
+            margin-top: 20px;
+        }
+        .player-position {
+            font-size: 30px;
+        }
     }
 }
