--- a/src/components/CardContainer/CardContainer.scss
+++ b/src/components/CardContainer/CardContainer.scss
@@ -13,9 +13,11 @@
 }
 
 .card-container {
-    overflow: scroll;
-    overflow-x: hidden;
-    height: 517px;
+    overflow: auto;
+    height: 530px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 ::-webkit-scrollbar {
