delete works, started progress on create

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -30,4 +30,8 @@
             font-size: 30px;
         }
     }
+    .delete-player-bttn {
+        background-color: rgba($medRed, 0.4);
+        border: none;
+    }
 }
