--- a/src/components/CardContainer/CardContainer.scss
+++ b/src/components/CardContainer/CardContainer.scss
@@ -18,6 +18,14 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    .open-form-button {
+        position: absolute;
+        margin-bottom: 30px;
+        height: 30px;
+        background-color: none;
+        border: none;
+        justify-self: center;
+    }
 }
 
 ::-webkit-scrollbar {
