form creates an object

--- a/src/components/PlayerForm/PlayerForm.scss
+++ b/src/components/PlayerForm/PlayerForm.scss
@@ -10,5 +10,8 @@
     border: 1px solid black;
     float: left;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 5px;
+    .form-group {
+        margin: 7px;
+    }
 };
