added edit button

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -34,4 +34,8 @@
         background-color: rgba($medRed, 0.4);
         border: none;
     }
+    .update-player-bttn {
+        background-color: rgba($greyBlue, 0.4);
+        border: none;
+    }
 }
