edit on the way

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -33,9 +33,11 @@
     .delete-player-bttn {
         background-color: rgba($medRed, 0.4);
         border: none;
+        width: 25px;
     }
     .update-player-bttn {
         background-color: rgba($greyBlue, 0.4);
         border: none;
+        width: 25px;
     }
 }
